[fix][refactor] cors configuration and check authentication controller